objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Channel Sales Process</fullName>
        <description>Opportunities through channel partners.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grants</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Payment Received</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grants Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>Develop Proposal</fullName>
        </values>
        <values>
            <fullName>Final Approval</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gifts</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1 - Identification</fullName>
        </values>
        <values>
            <fullName>2 - Qualification</fullName>
        </values>
        <values>
            <fullName>3 - Cultivation</fullName>
        </values>
        <values>
            <fullName>4 - Solicitation</fullName>
        </values>
        <values>
            <fullName>5 - Pledged</fullName>
        </values>
        <values>
            <fullName>6 - Gift Agreement</fullName>
        </values>
        <values>
            <fullName>7 - Closed Won</fullName>
        </values>
        <values>
            <fullName>8 - Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Simple Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FQuote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate_TODAY__c</fullName>
        <formula>CloseDate - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Countdown</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Amount__c</fullName>
        <label>DB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTimeCreated__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_In_Status__c</fullName>
        <formula>Now() - LastStageChangeDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Close_Date_Delta__c</fullName>
        <formula>ED_Predicted_Close_Date__c - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What: This is the number of days before or after the close date the opportunity is predicted to close.  It is calculated by subtracting the Close Date from the Predicted Close Date. This is from the SDO. DO NOT REMOVE.</inlineHelpText>
        <label>ED Close Date Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Leading_Causes__c</fullName>
        <description>What: Einstein Discovery Field. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ED_Outcome__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <inlineHelpText>This is the number of DAYS after the Created Date that this opportunity is targeted to close.</inlineHelpText>
        <label>ED Predicted Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ED_Predicted_Close_Date__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <formula>DateTimeCreated__c + ED_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is calculated by adding the number of days in the &quot;ED Predicted Time to Close&quot; field to the CREATED DATE.</inlineHelpText>
        <label>ED Predicted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ED_Prescription__c</fullName>
        <description>What: This is for Einstein Discovery. This is from the SDO. DO NOT REMOVE.</description>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exec_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity DIscovery.</inlineHelpText>
        <label>Executive Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interactive_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <inlineHelpText>Check this box to change the results of Einstein Opportunity Discovery</inlineHelpText>
        <label>Interactive Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader</description>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC10001</fullName>
                </value>
                <value>
                    <fullName>GC20002</fullName>
                </value>
                <value>
                    <fullName>GC50000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Dataset_Split__c</fullName>
        <description>SDO Maps Opportunity number field to split maps-related datasets equally and easily 02-02-23</description>
        <label>Opportunity Dataset Split</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tag_Opportunity__c</fullName>
        <description>SPM MAPS Opportunity dataset tag to help manage datasets in Maps and Territory Planning. 02-03-23 AB
Help Text</description>
        <label>Tag Opportunity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Pardot_Is_B2BMA_Plus_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: This data was added to support the B2BMA Plus (Pardot) Demo. This is here so we know what came from that import incase we want to remove the data. Who: Jesse Chase. When: 07/14/2021</description>
        <label>Is B2BMA Plus Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Quip_Close_Plan_Quip__c</fullName>
        <description>What: Used by the Quip lightning component to embed a Close Plan on the Opportunity record.  Added May 2021</description>
        <label>Close_Plan_Quip</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: This field is needed to allow FSL Mobile users to create new opportunities</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Competitor__c</fullName>
        <description>What: Used in Analytics Demo Data Tool. Who: Rodrigo Mercader
Used in Sales Paths on Opportunity</description>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Complete_ROI_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used for Sales Path</description>
        <label>Complete ROI Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Contract_Terms__c</fullName>
        <description>What: Used for Sales Path</description>
        <label>Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Discount__c</fullName>
        <description>What: used in approval process</description>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Partner_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used for the &quot;Partner Opportunities&quot; related list on Partner Account records.</description>
        <label>Partner Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>PartnerOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Set the Primary contact relationship</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Project_Budgeted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used for deal registration.</description>
        <label>Project Budgeted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Project_Manager_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used for Sales Path</description>
        <label>Project Manager Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Reason_Lost__c</fullName>
        <description>What: Reason lost field</description>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product Issues</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Sales_Stalled_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Checkbox for stuck oppty. Used in reporting</description>
        <label>Stalled Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Status_Value__c</fullName>
        <description>What: Status good or bad. Used in Formula fields</description>
        <formula>IF( CloseDate_TODAY__c &gt;0, &quot;good&quot;, &quot;bad&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Sales_Winning_Competitor__c</fullName>
        <description>What: used in reporting to detail the winning competitor</description>
        <label>Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup field to the Case Object.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Soft_Credit_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Soft Credit Recipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_CloseDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>CloseDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>ChannelPartner</fullName>
        <active>true</active>
        <businessProcess>Channel Sales Process</businessProcess>
        <description>Opportunities created by or for partners.</description>
        <label>Channel (Partner)</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Fundraising_Corporate_Gift</fullName>
        <active>true</active>
        <businessProcess>Major Gifts</businessProcess>
        <label>Corporate Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Fundraising_Grant</fullName>
        <active>true</active>
        <businessProcess>Grants</businessProcess>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Fundraising_Major_Gift</fullName>
        <active>true</active>
        <businessProcess>Major Gifts</businessProcess>
        <label>Major Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>SimpleOpportunity</fullName>
        <active>true</active>
        <businessProcess>Simple Sales Process</businessProcess>
        <description>Simple Opportunities with products.</description>
        <label>Simple Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>